# sound-classification

./: .gitignore  AMPLAB Module 4 - Embedding extractor.ipynb  AMPLAB Module 4 - Sound classification.ipynb  README.md  dataframe.csv  embedding_extractor.ipynb  pyproject.toml  requirements-uv.txt
amplab_machine_listening_module_data/: gaia_pca_dataset_history.json  taxonomy_names.json
